z5_src = files(['main.cpp', 'Iterator.h', 'Functions.h'])
executable(
	'z5',
	include_directories: src,
	sources: z5_src,
	dependencies: [],
	install: true
)

z2_src = files(['vector.cpp', 'Vector.h'])
executable(
	'z2',
	include_directories: src,
	sources: z2_src,
	dependencies: [],
	install: true
)